--- a/docs/browser_js/css/todo_list.css
+++ b/docs/browser_js/css/todo_list.css
@@ -2,7 +2,25 @@
   border: 1px dotted gray;
 }
 
-/* #taskInput {
+#title {
+  text-align: center;
+}
+
+#newTasks {
   display: flex;
+  flex-direction: column;
+}
+#newtask {
+  display: flex;
+  justify-content: space-between;
   flex-direction: row;
-} */
+}
+
+#icon {
+  display: flex;
+  flex-direction: column;
+}
+
+.material-symbols-outlined {
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
+}
