--- a/docs/browser_js/css/todo_list.css
+++ b/docs/browser_js/css/todo_list.css
@@ -2,7 +2,7 @@
   border: 1px dotted gray;
 } */
 * {
-  /* padding: 0.5rem; */
+  border-radius: 10px;
   font-size: 40px;
 }
 #body_div {
@@ -14,6 +14,8 @@
   background-color: darkblue;
   color: orange;
   border: darkblue;
+  margin-bottom: 5%;
+  font-size: 10px;
   height: 10%;
   width: 91%;
 }
